--- a/charts/thoras/templates/collector/deployment.yaml
+++ b/charts/thoras/templates/collector/deployment.yaml
@@ -40,6 +40,10 @@ spec:
             find /var/lib/share/elasticsearch -not -name postgresql -not -name data -not -name blobs -mindepth 1 -maxdepth 1 -exec mv {} /var/lib/share/elasticsearch/data \;
             chown -R 1000:0 /var/lib/share/elasticsearch/data
             rm -f /var/lib/share/elasticsearch/data/node.lock
+        {{- with .Values.metricsCollector.additionalPvSecurityContext }}
+        securityContext:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
         volumeMounts:
           - mountPath: /var/lib/share/elasticsearch
             name: elastic-search-data
@@ -50,6 +54,10 @@ spec:
           - |
             mkdir -p /var/lib/share/postgresql
             chown -R 1000:1000 /var/lib/share/postgresql
+        {{- with .Values.metricsCollector.additionalPvSecurityContext }}
+        securityContext:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
         volumeMounts:
           - mountPath: /var/lib/share
             name: elastic-search-data
@@ -85,6 +93,9 @@ spec:
         securityContext:
           runAsUser: 1000
           runAsGroup: 0
+          {{- with .Values.metricsCollector.additionalPvSecurityContext }}
+            {{- toYaml . | nindent 10 }}
+          {{- end }}
         {{- end }}
       - image: {{ .Values.imageCredentials.registry }}/timescaledb:{{ .Values.metricsCollector.timescale.imageTag }}
         name: timescaledb
@@ -106,6 +117,9 @@ spec:
         securityContext:
           runAsUser: 1000
           runAsGroup: 0
+          {{- with .Values.metricsCollector.additionalPvSecurityContext }}
+            {{- toYaml . | nindent 10 }}
+          {{- end }}
         {{- end }}
       - image: {{ .Values.imageCredentials.registry }}/services:{{ default .Values.thorasVersion .Values.metricsCollector.collector.imageTag }}
         imagePullPolicy: "{{ .Values.imagePullPolicy }}"
