--- a/charts/thoras/tests/monitor_v2_deployment_test.yaml
+++ b/charts/thoras/tests/monitor_v2_deployment_test.yaml
@@ -3,12 +3,11 @@ templates:
   - monitor-v2/deployment.yaml
 set:
   thorasVersion: 1.0.0-alpha
+  thorasMonitorV2:
+    enabled: true
 tests:
   - it: Should create deployment when thorasMonitorV2.enabled is true
     template: monitor-v2/deployment.yaml
-    set:
-      thorasMonitorV2:
-        enabled: true
     asserts:
       - equal:
           path: spec.template.spec.containers[0].name
@@ -21,3 +20,22 @@ tests:
     asserts:
       - hasDocuments:
           count: 0
+  - it: Should tolerations if specified
+    template: monitor-v2/deployment.yaml
+    set:
+      tolerations:
+        - key: "example-key"
+          operator: "Exists"
+          effect: "NoSchedule"
+    asserts:
+      - contains:
+          path: spec.template.spec.tolerations
+          content:
+            key: "example-key"
+            operator: "Exists"
+            effect: "NoSchedule"
+  - it: Should not have tolerations if not specified
+    template: monitor-v2/deployment.yaml
+    asserts:
+      - notExists:
+          path: spec.template.spec.tolerations
