--- a/charts/thoras/tests/api_service_deployment_test.yaml
+++ b/charts/thoras/tests/api_service_deployment_test.yaml
@@ -38,7 +38,7 @@ tests:
     asserts:
       - notExists:
           path: spec.template.spec.containers[*].securityContext
-  - it: Should tolerations if specified
+  - it: Should set tolerations if specified
     set:
       tolerations:
         - key: "example-key"
