--- a/charts/thoras/tests/collector_deployment_test.yaml
+++ b/charts/thoras/tests/collector_deployment_test.yaml
@@ -86,7 +86,7 @@ tests:
     asserts:
       - notExists:
           path: spec.template.spec.containers[*].securityContext
-  - it: Should tolerations if specified
+  - it: Should set tolerations if specified
     set:
       tolerations:
         - key: "example-key"
