set tolerations for operator to use when creating forecasts

--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -101,6 +101,8 @@ spec:
           - name: FORECAST_NODE_SELECTOR
             value: {{ $finalString }}
           {{- end }}
+          - name: SERVICE_FORECAST_TOLERATIONS
+            value: {{ .Values.tolerations | toJson | quote }}
         command: [
           "/app/operator"
         ]
