--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -166,4 +166,4 @@ queriesPerSecond: "50"
 # nodeSelector is used to assign components to specific nodes
 nodeSelector: {}
 
-tolerations: {}
+tolerations: []
