--- a/charts/thoras/templates/collector/pvc.yaml
+++ b/charts/thoras/templates/collector/pvc.yaml
@@ -16,7 +16,7 @@ spec:
   {{- end }}
   storageClassName: {{ .Values.metricsCollector.persistence.storageClassName }}
   accessModes:
-    - {{ .Values.metricsCollector.persistence.accessMode | default "ReadWriteOnce" | quote }}
+    - {{ .Values.metricsCollector.persistence.accessMode | default "ReadWriteOnce" }}
   resources:
     requests:
       storage: {{ .Values.metricsCollector.persistence.pvcStorageRequestSize }}
