Cleanup some timescale settings

--- a/charts/thoras/templates/collector/deployment.yaml
+++ b/charts/thoras/templates/collector/deployment.yaml
@@ -101,7 +101,7 @@ spec:
         name: timescaledb
         imagePullPolicy: "{{ .Values.imagePullPolicy }}"
         ports:
-        - containerPort: 5432
+        - containerPort: {{ .Values.metricsCollector.timescale.containerPort }}
         env:
           - name: "POSTGRES_PASSWORD"
             valueFrom:
