--- a/charts/thoras/templates/collector/service.yaml
+++ b/charts/thoras/templates/collector/service.yaml
@@ -15,7 +15,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.metricsCollector.timescale.name }}
+  name: timescale
   namespace: {{ .Release.Namespace }}
 spec:
   ports:
