--- a/charts/thoras/templates/component-clusterrole.yaml
+++ b/charts/thoras/templates/component-clusterrole.yaml
@@ -18,10 +18,10 @@ rules:
   - list
   - watch
 - apiGroups:
-  - apps
+  - '*'
   resources:
-  - deployments/scale
-  - deployments/status
+  - '*/scale'
+  - '*/status'
   verbs:
   - get
   - patch
