--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -164,7 +164,12 @@ thorasMonitorV2:
 
 thorasForecast:
   skipCache: false
-  requestCpu:
+  requests:
+    cpu: "256m"
+    memory: "256Mi"
+  limits:
+    memory: "8Gi"
+    cpu: "4"
   worker:
     enabled: false
     replicas: 1
