--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -101,6 +101,10 @@ spec:
           - name: FORECAST_NODE_SELECTOR
             value: {{ $finalString }}
           {{- end }}
+          {{- if .Values.thorasOperator.forecastQueue.enabled }}
+          - name: SERVICE_ENQUEUE_FORECASTS
+            value: true
+          {{- end }}
           - name: SERVICE_FORECAST_TOLERATIONS
             value: {{ .Values.tolerations | toJson | quote }}
         command: [
