--- a/charts/thoras/templates/monitor/configmap.yaml
+++ b/charts/thoras/templates/monitor/configmap.yaml
@@ -5,10 +5,7 @@ metadata:
   name: thoras-monitor-config
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ .Chart.Name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{- include "labels" . | nindent 4 }}
 data:
   config.yaml: |
 {{ .Values.thorasMonitor.config | indent 4 }}
