--- a/charts/thoras/templates/resource-quota.yaml
+++ b/charts/thoras/templates/resource-quota.yaml
@@ -7,10 +7,7 @@ metadata:
   name: thoras
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ .Chart.Name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{- include "labels" . | nindent 4 }}
 spec:
   hard:
     pods: {{ .Values.resourceQuota.pods }}
