--- a/charts/thoras/templates/collector/service.yaml
+++ b/charts/thoras/templates/collector/service.yaml
@@ -4,6 +4,8 @@ kind: Service
 metadata:
   name: elasticsearch
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "labels" . | nindent 4 }}
 spec:
   ports:
   - port: {{ .Values.metricsCollector.search.containerPort }}
@@ -17,10 +19,11 @@ kind: Service
 metadata:
   name: timescale
   namespace: {{ .Release.Namespace }}
-  {{- with .Values.metricsCollector.labels }}
   labels:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- include "labels" . | nindent 4 }}
+    {{- with .Values.metricsCollector.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   ports:
   - port: {{ .Values.metricsCollector.timescale.containerPort }}
@@ -34,10 +37,11 @@ kind: Service
 metadata:
   name: thoras-blob-api
   namespace: {{ .Release.Namespace }}
-{{- with .Values.metricsCollector.labels }}
   labels:
-  {{- toYaml . | nindent 4 }}
-{{- end }}
+    {{- include "labels" . | nindent 4 }}
+    {{- with .Values.metricsCollector.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   ports:
   - port: {{ .Values.metricsCollector.blobService.port }}
