--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -5,6 +5,8 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.17.2
   name: aiscaletargets.thoras.ai
+  labels:
+    {{- include "labels" . | nindent 4 }}
 spec:
   group: thoras.ai
   names:
