--- a/charts/thoras/templates/crd/matchlabels.yaml
+++ b/charts/thoras/templates/crd/matchlabels.yaml
@@ -3,6 +3,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: matchlabels.thoras.ai
+  labels:
+    {{- include "labels" . | nindent 4 }}
 spec:
   names:
     kind: MatchLabels
