--- a/charts/thoras/templates/dashboard/service.yaml
+++ b/charts/thoras/templates/dashboard/service.yaml
@@ -8,10 +8,11 @@ metadata:
   annotations:
     {{- toYaml . | nindent 8 }}
   {{- end }}
-  {{- with .Values.thorasDashboard.labels }}
   labels:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- include "labels" . | nindent 4 }}
+    {{- with .Values.thorasDashboard.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
 {{- if (or (eq .Values.thorasDashboard.service.type "ClusterIP") (empty .Values.thorasDashboard.service.type)) }}
   type: ClusterIP
