--- a/charts/thoras/templates/operator/service.yaml
+++ b/charts/thoras/templates/operator/service.yaml
@@ -4,10 +4,11 @@ kind: Service
 metadata:
   name: thoras-webhooks
   namespace: {{ .Release.Namespace }}
-  {{- with .Values.thorasOperator.labels }}
   labels:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- include "labels" . | nindent 4 }}
+    {{- with .Values.thorasOperator.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   ports:
   - port: 443
