--- a/charts/thoras/templates/operator/webhooks.yaml
+++ b/charts/thoras/templates/operator/webhooks.yaml
@@ -26,6 +26,8 @@ apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   name: "pods.thoras.ai"
+  labels:
+    {{- include "labels" . | nindent 4 }}
 webhooks:
 - name: "pods.thoras.ai"
   rules:
@@ -66,6 +68,8 @@ apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
   name: "validation.thoras.ai"
+  labels:
+    {{- include "labels" . | nindent 4 }}
 webhooks:
   - name: "ast-validation.thoras.ai"
     rules:
