--- a/charts/thoras/templates/reasoning-api/service.yaml
+++ b/charts/thoras/templates/reasoning-api/service.yaml
@@ -5,10 +5,11 @@ kind: Service
 metadata:
   name: thoras-reasoning-api
   namespace: {{ .Release.Namespace }}
-  {{- with .Values.thorasReasoning.api.labels }}
   labels:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- include "labels" . | nindent 4 }}
+    {{- with .Values.thorasReasoning.api.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   ports:
   - port: {{ .Values.thorasReasoning.api.port }}
