--- a/charts/thoras/tests/dashboard_service_test.yaml
+++ b/charts/thoras/tests/dashboard_service_test.yaml
@@ -1,6 +1,8 @@
 suite: Dashboard
 templates:
   - dashboard/service.yaml
+chart:
+  version: "4.36.0"
 tests:
   - it: Default matches snapshot
     asserts:
