Always show savings in the UI

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -155,7 +155,8 @@ thorasDashboard:
   service:
     type: ClusterIP
     annotations: {}
-  extras: {}
+  extras:
+    show_savings: true
 
 thorasMonitor:
   enabled: false
