--- a/charts/thoras/templates/collector/cronjob.yaml
+++ b/charts/thoras/templates/collector/cronjob.yaml
@@ -5,7 +5,7 @@ metadata:
   name: thoras-metrics-purge
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "labels" . | nindent 4 }}
+    {{- include "thoras.labels" . | nindent 4 }}
 spec:
   schedule: {{ .Values.metricsCollector.purge.schedule | quote }}
   jobTemplate:
