--- a/charts/thoras/templates/collector/service.yaml
+++ b/charts/thoras/templates/collector/service.yaml
@@ -5,7 +5,7 @@ metadata:
   name: elasticsearch
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "labels" . | nindent 4 }}
+    {{- include "thoras.labels" . | nindent 4 }}
 spec:
   ports:
   - name: http
@@ -21,7 +21,7 @@ metadata:
   name: timescale
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "labels" . | nindent 4 }}
+    {{- include "thoras.labels" . | nindent 4 }}
     {{- with .Values.metricsCollector.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
@@ -40,7 +40,7 @@ metadata:
   name: thoras-blob-api
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "labels" . | nindent 4 }}
+    {{- include "thoras.labels" . | nindent 4 }}
     {{- with .Values.metricsCollector.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
