--- a/charts/thoras/templates/crd/matchlabels.yaml
+++ b/charts/thoras/templates/crd/matchlabels.yaml
@@ -4,7 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   name: matchlabels.thoras.ai
   labels:
-    {{- include "labels" . | nindent 4 }}
+    {{- include "thoras.labels" . | nindent 4 }}
 spec:
   names:
     kind: MatchLabels
