--- a/charts/thoras/templates/forecast-worker/deployment.yaml
+++ b/charts/thoras/templates/forecast-worker/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   name: thoras-forecast-worker
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "labels" . | nindent 4 }}
+    {{- include "thoras.labels" . | nindent 4 }}
 spec:
   replicas:  {{ .Values.thorasForecast.worker.replicas }}
   selector:
@@ -15,7 +15,7 @@ spec:
     metadata:
       labels:
         app: thoras-forecast-worker
-        {{- include "labels" . | nindent 8 }}
+        {{- include "thoras.labels" . | nindent 8 }}
         {{- with .Values.thorasForecast.worker.labels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
