--- a/charts/thoras/templates/operator/service.yaml
+++ b/charts/thoras/templates/operator/service.yaml
@@ -5,7 +5,7 @@ metadata:
   name: thoras-webhooks
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "labels" . | nindent 4 }}
+    {{- include "thoras.labels" . | nindent 4 }}
     {{- with .Values.thorasOperator.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
