--- a/charts/thoras/templates/reasoning-api/service.yaml
+++ b/charts/thoras/templates/reasoning-api/service.yaml
@@ -6,7 +6,7 @@ metadata:
   name: thoras-reasoning-api
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "labels" . | nindent 4 }}
+    {{- include "thoras.labels" . | nindent 4 }}
     {{- with .Values.thorasReasoning.api.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
