--- a/charts/thoras/templates/resource-quota.yaml
+++ b/charts/thoras/templates/resource-quota.yaml
@@ -7,7 +7,7 @@ metadata:
   name: thoras
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "labels" . | nindent 4 }}
+    {{- include "thoras.labels" . | nindent 4 }}
 spec:
   hard:
     pods: {{ .Values.resourceQuota.pods }}
